@@ -34,6 +34,9 @@ Version 4.5  [ under development ]
             - Fires packetWasRenamed() when packet tags are added or removed.
               Note that packet tags still cannot be accessed through the GUI
               except for via the python bindings.
+            - Made the event handling code more robust; this fixes a
+              crash in the GUI when a script variable is deleted from
+              the packet tree while the script is open.
         Class NTriangulation:
             - Streamlined the implementation, cutting ~ 1/3 of the memory
               usage and improving speed also.  As a result:
